--- a/templates/bounties/add.html
+++ b/templates/bounties/add.html
@@ -7,22 +7,24 @@
   <center><span class="glyphicon glyphicon-refresh glyphicon-spin"></span> Loading...</center>
 </div>
 <form id="bounty-for">
-  <label id="bounty-status-label" for="bounty-status" class="hidden">
-    {% trans "Status" %}
-  </label>
-  <select class="form-control hidden" id="bounty-status">
-    <option value="1" selected>{% trans "Open" %}</option>
-    <option value="2">{% trans "Closed" %}</option>
-    <option value="3">{% trans "Cancelled" %}</option>
-  </select>
-  <br>
-  <small id="bounty-winner-help" class="hidden">
-    <p class="help-block">{% trans "If your bounty finally closed, we really encourage you to set the winner just bellow!" %}</p>
-  </small>
-  <br>
+  <div id="bounty-status-box" class="hidden">
+    <label id="bounty-status-label" for="bounty-status">
+      {% trans "Select your bounty status" %}
+    </label>
+    <small>
+      <p class="help-block">{% trans "Your bounty starts in open status. Then, if you decided that the bounty is a success, close it. You can also cancel for any reason.<br>For information, when a bounty is cancelled or closed, you can't re-open it." %}</p>
+    </small>
+    <select class="form-control" id="bounty-status">
+      <option value="1" selected>{% trans "Open" %}</option>
+      <option value="2">{% trans "Closed" %}</option>
+      <option value="3">{% trans "Cancelled" %}</option>
+    </select>
+    <br>
+  </div>
 
-  <!-- Winner Realm -->
-  <div id="winner-realms-box" class="hidden">
+  <div id="winner-box" class="well hidden">
+    <p class="help-block">{% trans "If your bounty finally closed, we really encourage you to set the winner just bellow!" %}</p>
+    <!-- Winner Realm -->
     <label id="winner-realms-label" for="winner-realms">
       {% trans "Winner realm" %}
     </label>
@@ -30,22 +32,20 @@
       <option value="">---</option>
     </select>
     <br>
-  </div>
-  <!-- End block -->
-  
-  <!-- Winner character -->
-  <div id="winner-character-box" class="hidden">
+    <!-- End block -->
+    
+    <!-- Winner character -->
     <label id="winner-character-label" for="winner-character">
       {% trans "Winner name" %}
     </label>
     <input id="winner-character" class="form-control" type="text" />
     <br>
+    <!-- End block -->
   </div>
-  <!-- End block -->
 
   <!-- Player Character -->
   <label id="player-characters-label" for="player-characters" class="hidden">
-    {% trans "Your character" %}
+    {% trans "Choose your character that will be the bounty author" %}
   </label>
   <select class="form-control hidden" id="player-characters">
     <option value="">---</option>
@@ -55,7 +55,7 @@
 
   <!-- Realm -->
   <label id="realms-label" for="realms" class="hidden">
-    {% trans "Target realm" %}
+    {% trans "Select the target realm" %}
   </label>
   <select class="form-control hidden" id="realms">
     <option value="">---</option>
@@ -65,12 +65,12 @@
   
   <!-- Destination character -->
   <label id="destination-character-label" for="realms" class="hidden">
-    {% trans "Target name" %}
+    {% trans "Write his name" %}
   </label>
   <input id="destination-character" class="form-control hidden" type="text" />
   <br>
   <label for="reward" id="reward-label" class="hidden">
-    {% trans "Reward" %}
+    {% trans "Choose the reward" %}
 	</label>
   <small class="help hidden">
     <p class="help-block">{% trans "Markdown allowed." %}</p>
@@ -78,7 +78,7 @@
 	<textarea class="form-control hidden" id="reward" rows="4" cols="50"></textarea>
   <br>
 	<label for="description" id="description-label" class="hidden">
-    {% trans "Description" %}
+    {% trans "Describe the bounty motivation and kill conditions" %}
 	</label>
   <small class="help hidden">
     <p class="help-block">{% trans "Markdown allowed." %}</p>
@@ -163,15 +163,12 @@
           $("select#bounty-status option").filter(function() {
               return $(this).val() == data.status; 
           }).prop('selected', true);
-          $("label#bounty-status-label").removeClass('hidden');
-          $("select#bounty-status").removeClass('hidden');
+          $("div#bounty-status-box").removeClass("hidden");
           if (isPrivate)
             $("input#is-private-input").prop('checked', true);
 
           if (selectedStatus == "2") {
-            $("#bounty-winner-help").removeClass("hidden");
-            $("div#winner-realms-box").removeClass("hidden");
-            $("div#winner-character-box").removeClass("hidden");
+            $("div#winner-box").removeClass("hidden");
           }
         });
       },
@@ -282,13 +279,16 @@
       source_character: selectedSourceCharacter,
       destination_realm: selectedDestinationRealm,
       destination_character: selectedDestinationCharacter,
-      winner_realm: selectedWinnerRealm,
-      winner_character: selectedWinnerCharacter,
       description: description,
       reward: reward,
       status: selectedStatus,
       is_private: isPrivate,
     };
+
+    if (selectedStatus == "2") {
+      bounty.winner_realm = selectedWinnerRealm;
+      bounty.winner_character = selectedWinnerCharacter;
+    }
     $.ajax({
       url: "/api/bounty/" + getUrlParameter('update'),
       dataType: 'json',
@@ -374,12 +374,9 @@
     $("select#bounty-status").change(function() {
       // If bounty is set to closed, display winner input
       if ($(this).val() == "2") {
-        $("#bounty-winner-help").removeClass("hidden");
-        $("div#winner-realms-box").removeClass("hidden");
-        $("div#winner-character-box").removeClass("hidden");
+        $("div#winner-box").removeClass("hidden");
       } else {
-        $("div#winner-realms-box").addClass("hidden");
-        $("div#winner-character-box").addClass("hidden");
+        $("div#winner-box").addClass("hidden");
       }
     });
 
