--- a/templates/base.html
+++ b/templates/base.html
@@ -16,96 +16,24 @@
 	{% include "header.html" %}
   <div class="container">
     {% block content %}{% endblock %}
-    {% include "footer.html" %}
   </div>
   <script src='https://www.google.com/recaptcha/api.js'></script>
   {% compress js %}
     <script src="{% static 'bountyomatic/js/jquery-2.1.3.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bountyomatic/js/bountyomatic.js' %}"></script>
   {% endcompress %}
 	{% block javascripts %}{% endblock %}
   <script>
     $(function() {
-      // Language switcher
-      $("ul#language-switcher li a").click(function() {
-        var lang = $(this).attr('value');
-        var $form = $('<form style="display:none;" action="/i18n/setlang/" method="POST">' +
-          "{% csrf_token %}" + 
-          '<input type="hidden" name="language" value="' + lang + '">' +
-          '</form>');
-        $form.appendTo("body").submit();
+      loadLanguageSwitcher();
+      getPlayerBattletag(function(data) {
+        unsetProgressBar(data.battletag);
       });
-
-      $.ajax({
-        url: "/api/player-battletag",
-        dataType: 'json',
-        success: function(data) {
-          var battletag = $("div.battletag");
-          battletag.text(data.battletag);
-          battletag.removeClass("active");
-          battletag.removeClass("progress-bar-striped");
-          battletag.addClass("progress-bar");
-          battletag.removeClass("progress-bar-warning");
-        },
-        error: function(xhr, status, err) {
-          console.error("/api/player-battletag", status, err.toString());
-        },
-      });
-    });
-    function getUrlParameter(sParam)
-    {
-      var sPageURL = window.location.search.substring(1);
-      var sURLVariables = sPageURL.split('&');
-      for (var i = 0; i < sURLVariables.length; i++) {
-        var sParameterName = sURLVariables[i].split('=');
-        if (sParameterName[0] == sParam) {
-          return sParameterName[1] || true;
-        }
-      }
-    };
-    function getCookie(name) {
-      var cookieValue = null;
-      if (document.cookie && document.cookie != '') {
-        var cookies = document.cookie.split(';');
-        for (var i = 0; i < cookies.length; i++) {
-          var cookie = jQuery.trim(cookies[i]);
-          // Does this cookie string begin with the name we want?
-          if (cookie.substring(0, name.length + 1) == (name + '=')) {
-            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-            break;
-          }
-        }
-      }
-      return cookieValue;
-    }
-    function csrfSafeMethod(method) {
-      // these HTTP methods do not require CSRF protection
-      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-    function sameOrigin(url) {
-      // test that a given url is a same-origin URL
-      // url could be relative or scheme relative or absolute
-      var host = document.location.host; // host + port
-      var protocol = document.location.protocol;
-      var sr_origin = '//' + host;
-      var origin = protocol + sr_origin;
-      // Allow absolute or scheme relative URLs to same origin
-      return (url == origin || url.slice(0, origin.length + 1) == origin + '/') ||
-        (url == sr_origin || url.slice(0, sr_origin.length + 1) == sr_origin + '/') ||
-        // or any other URL that isn't scheme relative or absolute i.e relative.
-        !(/^(\/\/|http:|https:).*/.test(url));
-    }
-    $.ajaxSetup({
-      beforeSend: function(xhr, settings) {
-        if (!csrfSafeMethod(settings.type) && sameOrigin(settings.url)) {
-          // Send the token to same-origin, relative URLs only.
-          // Send the token only if the method warrants CSRF protection
-          // Using the CSRFToken value acquired earlier
-          var csrftoken = getCookie('csrftoken');
-          xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        }
-      }
     });
   </script>
+  <div class="container">
+    {% include "footer.html" %}
+  </div>
 </body>
 </html>
