--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
       });
     });
   </script>
-  <div class="container">
+  <div class="container footer">
     {% include "footer.html" %}
   </div>
 </body>
