--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -49,8 +49,7 @@
                 <dt>{% trans "Author" %}</dt>
                 <dd>
                   <a class="character-armory-link" href="{{ bounty.source_armory }}">
-                    {{ bounty.source_character }} - {{ bounty.source_realm_display }}
-                    {% if bounty.source_guild %} - {{ bounty.source_guild }}{% endif %}</a>
+                    {{ bounty.source_character }} - {{ bounty.source_realm_display }}{% if bounty.source_guild %} - {{ bounty.source_guild }}{% endif %}</a>
                   {% if bounty.source_faction_display %}
                     <span class="label {% if bounty.source_faction == 0 %}label-info{% elif bounty.source_faction == 1 %}label-danger{% else %}label-default{% endif %}">{{ bounty.source_faction_display }}</span>
                   {% endif %}
@@ -61,8 +60,7 @@
                 <dt>{% trans "Target" %}</dt>
                 <dd>
                   <a class="character-armory-link" href="{{ bounty.destination_armory }}">
-                    {{ bounty.destination_character }} - {{ bounty.destination_realm_display }}
-                    {% if bounty.destination_guild %} - {{ bounty.destination_guild }}{% endif %}</a>
+                    {{ bounty.destination_character }} - {{ bounty.destination_realm_display }}{% if bounty.destination_guild %} - {{ bounty.destination_guild }}{% endif %}</a>
                   {% if bounty.destination_faction_display %}
                     <span class="label {% if bounty.destination_faction == 0 %}label-info{% elif bounty.destination_faction == 1 %}label-danger{% else %}label-default{% endif %}">{{ bounty.destination_faction_display }}</span>
                   {% endif %}
@@ -75,8 +73,7 @@
                   <dd>
                   {% if bounty.winner_character %}
                     <a class="character-armory-link" href="{{ bounty.winner_armory }}">
-                      {{ bounty.winner_character }} - {{ bounty.winner_realm_display }}
-                      {% if bounty.winner_guild %} - {{ bounty.winner_guild }}{% endif %}</a>
+                      {{ bounty.winner_character }} - {{ bounty.winner_realm_display }}{% if bounty.winner_guild %} - {{ bounty.winner_guild }}{% endif %}</a>
                     {% if bounty.winner_faction_display %}
                       <span class="label {% if bounty.winner_faction == 0 %}label-info{% elif bounty.winner_faction == 1 %}label-danger{% else %}label-default{% endif %}">{{ bounty.winner_faction_display }}</span>
                     {% endif %}
