--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
   <script src='https://www.google.com/recaptcha/api.js'></script>
   {% compress js %}
     <script src="{% static 'bountyomatic/js/jquery-2.1.3.min.js' %}"></script>
+    <script src="{% static 'bountyomatic/js/jquery.cookie-1.4.1.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/bountyomatic.js' %}"></script>
   {% endcompress %}
