--- a/templates/bounties/list.html
+++ b/templates/bounties/list.html
@@ -181,7 +181,7 @@
     };
     if (selectedStatus) {
       params.status = selectedStatus;
-      $.cookie('search-status', selectedStatus; {expires: 21});
+      $.cookie('search-status', selectedStatus, {expires: 21});
     };
     if (selectedRealm) {
       params.realm = selectedRealm;
