--- a/templates/bounties/add.html
+++ b/templates/bounties/add.html
@@ -187,7 +187,7 @@
           $("select#player-characters").append(
             "<option value=\"" + val.region + "|" + val.normalized_realm +
             "|"  + val.name + "\">" + val.name + " - " + val.realm +
-            " (" + val.level + ") </option>");
+            " (" + val.class_display + ") (" + val.level + ") (" + val.faction_display + ")</option>");
         });
         $("div#loading").addClass("hidden");
         $("select#player-characters").removeClass("hidden");
