--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -112,8 +112,11 @@
   </div>
   <hr>
   <div id="comments">
-    <h3>{% trans "Comments" %} <small>{% if bounty.comments.count %}({{ bounty.comments.count }}){% endif %}</small></h3> 
-    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#addCommentCollapse" aria-expanded="false" aria-controls="  collapseExample">
+    <h3>{% trans "Discussion" %} <small>{% if bounty.comments.count %}({{ bounty.comments.count }}){% endif %}</small></h3> 
+    <small class="help">
+      <p class="help-block">{% trans "Discuss with other mercenaries interested in this bounty." %}</p>
+    </small>
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#addCommentCollapse" aria-expanded="false" aria-controls="collapseExample">
       {% trans "Add a comment" %} <span class="caret"></span>
     </button>
     <div class="collapse" id="addCommentCollapse">
@@ -156,6 +159,13 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           {{ comment.character_name }} - {{ comment.character_realm_display }}{% if comment.character_guild %} - {{ comment.character_guild }}{% endif %}
+          {% if comment.character_name == bounty.source_character and comment.character_realm == bounty.source_realm %}
+            <span class="label label-primary">{% trans "Author" %}</span>
+          {% elif comment.character_name == bounty.destination_character and comment.character_realm == bounty.destination_realm %}
+            <span class="label label-primary">{% trans "Target" %}</span>
+          {% elif comment.character_name == bounty.winner_character and comment.character_realm == bounty.winner_realm %}
+            <span class="label label-primary">{% trans "Winner" %}</span>
+          {% endif %}
           <small class="pull-right">{{ comment.added_date|date:"l d M Y" }} {{ comment.added_date|time:"H:i" }}</small>
         </div>
         <div class="panel-body comment-body">
@@ -278,7 +288,7 @@
               $("select#player-characters").append(
                 "<option value=\"" + val.region + "|" + val.normalized_realm +
                 "|"  + val.name + "\">" + val.name + " - " + val.realm +
-                " (" + val.level + ") </option>");
+                " (" + val.class_display + ") (" + val.level + ") (" + val.faction_display + ")</option>");
             });
             $("form#comment-form").css("display", "block");
             if (callback)
