add email and google analytics

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class="row">
 	<hr>
-	<em>Bounty-O-Matic {% trans "for" %} World of Warcraft {% trans "by" %} Bodoc-Conseil des Ombres (<a href="http://stormwind-legion.fr/" target="_blank">Légion de Stormwind</a>)</em><small class="pull-right">{% if user.is_authenticated %}<a id="refresh-link" class="footer-refresh" href="#">{% trans "Refresh your BattleNet data" %}</a> | {% endif %}0.1 (Zappy Gnome)</small>
+	<em>Bounty-O-Matic {% trans "for" %} World of Warcraft {% trans "by" %} Bodoc-Conseil des Ombres (<a href="http://stormwind-legion.fr/" target="_blank">Légion de Stormwind</a>) - contact@bounty-o-matic.com</em><small class="pull-right">{% if user.is_authenticated %}<a id="refresh-link" class="footer-refresh" href="#">{% trans "Refresh your BattleNet data" %}</a> | {% endif %}0.1 (Zappy Gnome)</small>
 </div>
 
 <script>
