--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <title>Bounty-O-Matic</title>
   <meta charset="UTF-8">
   {% compress css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/chosen.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/fonts.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/custom.css' %}">
@@ -21,6 +22,7 @@
   {% compress js %}
     <script src="{% static 'bountyomatic/js/jquery-2.1.3.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/jquery.cookie-1.4.1.min.js' %}"></script>
+    <script src="{% static 'bountyomatic/js/chosen.jquery.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/bountyomatic.js' %}"></script>
   {% endcompress %}
