--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,30 +1,30 @@
 {% load i18n %}
 <div class="row">
-	<div class="col-md-12">
-		<hr>
-		<em>Bounty-O-Matic {% trans "for" %} World of Warcraft {% trans "by" %} Bodoc-Conseil des Ombres (<a href="http://stormwind-legion.fr/" target="_blank">Légion de Stormwind</a>) - contact@bounty-o-matic.com</em><small class="pull-right">{% if user.is_authenticated %}<a id="refresh-link" class="footer-refresh" href="#">{% trans "Refresh your BattleNet data" %}</a> | {% endif %}0.1 (Zappy Gnome)</small>
-	</div>
+  <div class="col-md-12">
+    <hr>
+    <em>Bounty-O-Matic <span class="hidden-xs hidden-sm">{% trans "for" %} World of Warcraft {% trans "by" %} Bodoc-Conseil des Ombres (<a href="http://stormwind-legion.fr/" target="_blank">Légion de Stormwind</a>)</span> - contact@bounty-o-matic.com</em><small class="pull-right">{% if user.is_authenticated %}<a id="refresh-link" class="footer-refresh" href="#">{% trans "Refresh your BattleNet data" %}</a> | {% endif %}0.1 (Zappy Gnome)</small>
+  </div>
 </div>
 
 <script>
   $(function() {
-		$("a#refresh-link").click(function(e) {
-			e.preventDefault();
-      		setProgressBar("{% trans 'Refreshing your BattleNet data...' %}");
-      		$("a#refresh-link").text("");
-			$.ajax({
-	      url: "/api/player-refresh",
-	      type: 'GET',
-	      success: function(data) {
-	        $("a#refresh-link").text(data.reasons[0]);
-          	getPlayerBattletag(function(data) {
+    $("a#refresh-link").click(function(e) {
+      e.preventDefault();
+          setProgressBar("{% trans 'Refreshing your BattleNet data...' %}");
+          $("a#refresh-link").text("");
+      $.ajax({
+        url: "/api/player-refresh",
+        type: 'GET',
+        success: function(data) {
+          $("a#refresh-link").text(data.reasons[0]);
+            getPlayerBattletag(function(data) {
             unsetProgressBar(data.battletag);
           });
-	      },
-	      error: function(xhr, status, err) {
-	        console.error("/api/player-refresh", status, err.toString());
-	      }
-	    }); 
-		});
-	});
+        },
+        error: function(xhr, status, err) {
+          console.error("/api/player-refresh", status, err.toString());
+        }
+      }); 
+    });
+  });
 </script>
