--- a/templates/header.html
+++ b/templates/header.html
@@ -11,14 +11,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'home' %}">Bounty-O-Matic </a>
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <img alt="Brand" src="{% static 'bountyomatic/img/logo.png' %}">
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse">
     	<ul class="nav navbar-nav navbar-left">
     		{% if user.is_authenticated %}
-          <div class="nav navbar-text progress" style="width:270px;margin-top:14px;margin-bottom:-14px;height:30px">
+          <div class="nav navbar-text progress" style="width:270px;margin-top:16px;margin-bottom:-16px;height:30px">
             <div class="progress-bar progress-bar-warning progress-bar-striped active battletag" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;padding-top:8px;font-weight:bold;font-size:90%">{% trans 'Loading data from Blizzard...' %}</div>
           </div>
+          {% if user.is_staff %}
+            <li><a class="danger-text" href="/admin">{% trans "Access admin" %}</a></li>
+          {% endif %}
       	{% endif %}
     	</ul>
     	<ul class="nav navbar-nav navbar-right">
